--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,11 @@
         android:label="@string/app_name">
         <activity
             android:name="com0.example.android.bouncingmessengertestapp.WiFiServiceDiscoveryActivity"
-            android:screenOrientation="fullSensor">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com0.example.android.bouncingmessengertestapp.WiFiServiceDiscoveryActivity" />
-
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -45,9 +45,8 @@
         </activity>
         <activity android:name="com0.example.android.bouncingmessengertestapp.Activity_Login">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name="com0.example.android.bouncingmessengertestapp.SignUp">
